Made a lot of progress, added code to the buttons so that the user can finally give the game input. Instead of creating multiple activities for testing purposes, I used Toast texts to test code. Each option of survival has a random() method that generates a random int. This integer is used for deciding the fate of the player. I plan to add more options like health, hunger, inventory, etc. in the near future.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity android:name=".LeavingBase">
 
         </activity>
+        <activity android:name=".VehicleEncounter">
+
+        </activity>
     </application>
 
 </manifest>
