Added screen display for the character when they die. Changed the code for the random method so that the chance of the player dieing starts at 10% and will increase as the game progresses. Future updates are adding health, inventory, etc. as soon as I learn how to create saves.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
         <activity android:name=".VehicleEncounter">
 
         </activity>
+
+        <activity android:name=".DeathScene">
+
+        </activity>
     </application>
 
 </manifest>
